--- a/index.html
+++ b/index.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,600,700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,600,700&display=swap"
+      rel="stylesheet"
+    />
     <title>ActiveBox</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!--Header-->
     <header class="header">
-        <div class="container">
-            <div class="header__inner">
-                <div class="header__logo">
-                    <img src="img/logo/ActiveBox.png" alt="">
-                </div>
-                <nav class="nav">
-                    <a href="#" class="nav__link"></a>
-                    <a href="#" class="nav__link"></a>
-                    <a href="#" class="nav__link"></a>
-                    <a href="#" class="nav__link"></a>
-                    <a href="#" class="nav__link"></a>
-                </nav>
-            </div>
+      <div class="container">
+        <div class="header__inner">
+          <div class="header__logo">
+            <img src="img/logo/ActiveBox.png" alt="" />
+          </div>
+          <nav class="nav">
+            <a href="#" class="nav__link">Features</a>
+            <a href="#" class="nav__link">Works</a>
+            <a href="#" class="nav__link">Our Team</a>
+            <a href="#" class="nav__link">Testimonials</a>
+            <a href="#" class="nav__link">Download</a>
+          </nav>
         </div>
+      </div>
     </header>
-</body>
+    <!--Intro-->
+    <div class="intro">
+      <div class="container">
+        <div class="intro__inner">
+          <h1 class="intro__title">
+            Your Favorite One Page Multi Purpose Template
+          </h1>
+          <h2 class="intro__subtitle">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+            commodo cursus magna vel scelerisque nisl consectetur et.
+          </h2>
+          <a href="#" class="btn btn--red">Find Out More</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
