--- a/index.html
+++ b/index.html
@@ -43,5 +43,63 @@
         </div>
       </div>
     </div>
+
+    <!--Features-->
+    <div class="container">
+      <div class="features">
+        <div class="features__item">
+          <img class="features__icon" src="img/features/1.png" alt="" />
+          <h4 class="features__title">Easily Customised</h4>
+          <div class="features__text">
+            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
+            quis risus eget urna mollis ornare vel eu leo. .
+          </div>
+        </div>
+        <div class="features__item">
+          <img class="features__icon" src="img/features/2.png" alt="" />
+          <h4 class="features__title">Responsive REady</h4>
+          <div class="features__text">
+            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
+            quis risus eget urna mollis
+          </div>
+        </div>
+
+        <div class="features__item">
+          <img class="features__icon" src="img/features/3.png" alt="" />
+          <h4 class="features__title">Modern Design</h4>
+          <div class="features__text">
+            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
+            quis risus eget urna mollis ornare vel eu
+          </div>
+        </div>
+
+        <div class="features__item">
+          <img class="features__icon" src="img/features/4.png" alt="" />
+          <h4 class="features__title">Clean Code</h4>
+          <div class="features__text">
+            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
+            quis risus eget urna mollis ornare
+          </div>
+        </div>
+
+        <div class="features__item">
+          <img class="features__icon" src="img/features/5.png" alt="" />
+          <h4 class="features__title">Ready to Ship</h4>
+          <div class="features__text">
+            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
+            quis risus eget urna mollis
+          </div>
+        </div>
+
+        <div class="features__item">
+          <img class="features__icon" src="img/features/6.png" alt="" />
+          <h4 class="features__title">Download for Free</h4>
+          <div class="features__text">
+            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam
+            quis risus eget urna mollis o
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
