--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,600,700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/63df5c547c.js"></script>
     <title>ActiveBox</title>
   </head>
   <body>
@@ -156,6 +157,93 @@
         <div class="works__content">
           <div class="works__title">Project Name</div>
           <div class="works__text">User Interface Design</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="team">
+      <div class="container">
+        <div class="team__personal">
+          <div class="team__personal__item">
+            <img
+              src="img/personal/Layer_30.png"
+              alt=""
+              class="team__personal__img"
+            />
+            <div class="team__personal__name">Ruth Woods</div>
+            <div class="team__personal__profession">Founder, CEO</div>
+            <div class="team__personal__text">
+              Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+              nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam
+              eget risus varius blandit sit amet non magna. Nullam quis risus
+              eget urna mollis ornare vel eu leo.
+            </div>
+            <div class="team__personal__socials">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
+            </div>
+          </div>
+          <div class="team__personal__item">
+            <img
+              src="img/personal/Layer_31.png"
+              alt=""
+              class="team__personal__img"
+            />
+            <div class="team__personal__name">Ruth Woods</div>
+            <div class="team__personal__profession">Founder, CEO</div>
+            <div class="team__personal__text">
+              Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+              nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam
+              eget risus varius blandit sit amet non magna. Nullam quis risus
+              eget urna mollis ornare vel eu leo.
+            </div>
+            <div class="team__personal__socials">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
+            </div>
+          </div>
+          <div class="team__personal__item">
+            <img
+              src="img/personal/Layer_32.png"
+              alt=""
+              class="team__personal__img"
+            />
+            <div class="team__personal__name">Ruth Woods</div>
+            <div class="team__personal__profession">Founder, CEO</div>
+            <div class="team__personal__text">
+              Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+              nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam
+              eget risus varius blandit sit amet non magna. Nullam quis risus
+              eget urna mollis ornare vel eu leo.
+            </div>
+            <div class="team__personal__socials">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
+            </div>
+          </div>
+          <div class="team__personal__item">
+            <img
+              src="img/personal/Layer_33.png"
+              alt=""
+              class="team__personal__img"
+            />
+            <div class="team__personal__name">Ruth Woods</div>
+            <div class="team__personal__profession">Founder, CEO</div>
+            <div class="team__personal__text">
+              Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+              nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam
+              eget risus varius blandit sit amet non magna. Nullam quis risus
+              eget urna mollis ornare vel eu leo.
+            </div>
+            <div class="team__personal__socials">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
