Add block Dowwnloads

--- a/index.html
+++ b/index.html
@@ -256,7 +256,11 @@
                     <div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
                     <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
                 </div>
+            </div>
+          Fusce dapibus, tellus ac cursus commodo
         </div>
+        <a href="#" class="btn btn--red btn__long ">Download Here</a>
+      </div>
     </div>
   </body>
 </html>
