--- a/index.html
+++ b/index.html
@@ -257,9 +257,45 @@
                     <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
                 </div>
             </div>
+            </div>
           Fusce dapibus, tellus ac cursus commodo
         </div>
         <a href="#" class="btn btn--red btn__long ">Download Here</a>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <div class="colums">
+          <div class="col">
+            <div class="colums__info">
+              <div class="colums__info__title">Location</div>
+              <div class="colums__info__text">
+                3481 Melrose Place <br />
+                Beverly Hills, CA 90210
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="colums__socials">
+              <div class="colums__info__title">Share with Love</div>
+              <div class="colums__socials__link">
+                <i class="fab fa-facebook-f fab--footer"></i>
+                <i class="fab fa-twitter fab--footer"></i>
+                <i class="fab fa-linkedin fab--footer"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="colums__info">
+              <div class="colums__info__title">About ActiveBox</div>
+              <div class="colums__info__text">
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Donec ullamcorper nulla non metus auctor fringilla.
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
