--- a/index.html
+++ b/index.html
@@ -249,15 +249,30 @@
     </div>
 
     <div class="reviews">
-        <div class="container">
-           <div class="reviews__item">
-                <div class="reviews__photo"><img class="reviews__img" src="img/rewiews/1.png" alt=""></div>
-                <div class="reviews__content">
-                    <div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
-                    <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
-                </div>
+      <div class="container">
+        <div class="reviews__item">
+          <div class="reviews__photo">
+            <img class="reviews__img" src="img/rewiews/1.png" alt="" />
+          </div>
+          <div class="reviews__content">
+            <div class="reviews__text">
+              “Integer posuere erat a ante venenatis dapibus posuere velit
+              aliquet. Donec sed odio dui. Aenean eu leo quam...”
             </div>
+            <div class="reviews__author">
+              Susan Sims, Interaction Designer at XYZ
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="download">
+      <div class="container">
+        <div class="download__title">
+          Are You Ready to Start? Download Now For Free!
+        </div>
+        <div class="download__text">
           Fusce dapibus, tellus ac cursus commodo
         </div>
         <a href="#" class="btn btn--red btn__long ">Download Here</a>
