--- a/index.html
+++ b/index.html
@@ -313,5 +313,13 @@
         </div>
       </div>
     </div>
+    <div class="copyright">
+      <div class="container">
+        <div class="copyright__inner">
+          Copyright © 2015 ActiveBox. All Rights Reserved <br />
+          Made with <span>Love</span> by Kamal Chaneman
+        </div>
+      </div>
+    </div>
   </body>
 </html>
