--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     />
     <script src="https://kit.fontawesome.com/63df5c547c.js"></script>
     <title>ActiveBox</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
     <!--Header-->
-    <header class="header">
+    <header class="header" id="header">
       <div class="container">
         <div class="header__inner">
           <div class="header__logo">
@@ -33,7 +34,7 @@
       </div>
     </header>
     <!--Intro-->
-    <div class="intro">
+    <div class="intro" id="intro">
       <div class="container">
         <div class="intro__inner">
           <h1 class="intro__title">
@@ -325,4 +326,5 @@
       </div>
     </div>
   </body>
+  <script src="app.js"></script>
 </html>
