--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
           <div class="header__logo">
             <img src="img/logo/ActiveBox.png" alt="" />
           </div>
-          <nav class="nav">
-            <a href="#" class="nav__link">Features</a>
-            <a href="#" class="nav__link">Works</a>
-            <a href="#" class="nav__link">Our Team</a>
-            <a href="#" class="nav__link">Testimonials</a>
-            <a href="#" class="nav__link">Download</a>
+          <nav class="nav" id="nav">
+            <a href="#" class="nav__link" data-scroll="#features">Features</a>
+            <a href="#" class="nav__link" data-scroll="#works">Works</a>
+            <a href="#" class="nav__link" data-scroll="#team">Our Team</a>
+            <a href="#" class="nav__link" data-scroll="#reviews"
+              >Testimonials</a
+            >
+            <a href="#" class="nav__link" data-scroll="#download">Download</a>
           </nav>
-          <button class="burger">
+          <button class="burger" id="navToggle">
             <span class="burger__item"> </span>
           </button>
         </div>
@@ -51,7 +53,7 @@
 
     <!--Features-->
     <div class="container">
-      <div class="features">
+      <div class="features" id="features">
         <div class="features__item">
           <img class="features__icon" src="img/features/1.png" alt="" />
           <h4 class="features__title">Easily Customised</h4>
@@ -106,7 +108,7 @@
         </div>
       </div>
     </div>
-    <div class="works">
+    <div class="works" id="works">
       <div class="works__item">
         <img class="works__photo" src="img/projects/1.png" alt="" />
         <div class="works__content">
@@ -165,7 +167,7 @@
       </div>
     </div>
 
-    <div class="team">
+    <div class="team" id="team">
       <div class="container">
         <div class="team__personal">
           <div class="team__personal__item">
@@ -252,7 +254,7 @@
       </div>
     </div>
 
-    <div class="reviews">
+    <div class="reviews" id="reviews">
       <div class="container">
         <div class="reviews__item">
           <div class="reviews__photo">
@@ -271,7 +273,7 @@
       </div>
     </div>
 
-    <div class="download">
+    <div class="download" id="download">
       <div class="container">
         <div class="download__title">
           Are You Ready to Start? Download Now For Free!
